# Jumper

./: CMakeLists.txt
Header/: Ball.h  Entity.h  HealthBar.h  Heart.h  Map.h  Platform.h  Player.h  PowerUp.h
Source/: Ball.cpp  Entity.cpp  HealthBar.cpp  Heart.cpp  Map.cpp  Platform.cpp  Player.cpp  PowerUp.cpp
Test/: CMakeLists.txt  runAllTests.cpp
Test/lib/googletest/: README.md
Test/lib/googletest/src/: gtest.cc
